# network_automation

./: .gitignore  README.md  backup-20260102-074026.backup  backup-20260102-074630.backup  backup-20260102-074827.backup  backup-20260102-074918.backup  backup-20260102-075012.backup  pyproject.toml  update.py
docs/: architecture.md
docs/examples/: run_command.py  update.py
network_automation/: base_client.py  context.py  factory.py  results.py
network_automation/tests/: test_execution_context.py  test_logging_cli.py  test_logging_injected.py  test_results.py
network_automation/tests/mikrotik/: test_mikrotik.py
network_automation/tests/mikrotik_routeros/: conftest.py  test_backup_result.py  test_download.py  test_execution_context.py  test_logging_cli.py  test_logging_injected.py  test_mikrotik_routeros.py  test_results.py  test_run.py  test_upgrade_result.py  test_upload.py
network_automation/vendors/mikrotik/: client.py  upgrade.py
